--- a/public/paralexcss/style.css
+++ b/public/paralexcss/style.css
@@ -43,7 +43,7 @@ p {
 }
 
 .content-container {
-    background-color: rgb(0, 0, 255, 0.6);
+    background-color: rgba(128, 128, 226, 0.8);
     padding: 10px;
     margin-bottom: 80px;
 }
